--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,12 +60,14 @@ header {
 
 
 }
+
 .error-url {
    position: relative;
    top: 10rem;
    text-align: center;
    height: 65vh;
 }
+
 header .container {
    height: 100%;
    display: flex;
@@ -75,6 +77,17 @@ header .container {
 
 header .container .logo-image a h1 {
    color: var(--btn);
+}
+
+.loadMore {
+   position: relative;
+   bottom: 4rem;
+   font-size: 1rem;
+   margin-right: 0.5rem;
+   background-color: var(--color-secondary);
+   border: none;
+   color: var(--btn);
+   cursor: pointer;
 }
 
 ul {
@@ -331,10 +344,12 @@ ul li a:hover {
    gap: 20px;
    margin-bottom: 150px;
 }
+
 .container .title-highest {
    position: relative;
    top: 100px;
 }
+
 .header-books ul {
    width: 100%;
 }
@@ -343,7 +358,7 @@ ul li a:hover {
    margin: 30px 0px;
 }
 
-.header-books .rang-author{
+.header-books .rang-author {
    padding: 5px;
    width: fit-content;
    border-radius: 10px;
@@ -416,9 +431,11 @@ ul li a:hover {
    padding-top: 100px;
    font-size: 1.5rem;
 }
-.title-like-you-book{
- margin: 1.5rem 0rem;
+
+.title-like-you-book {
+   margin: 1.5rem 0rem;
 }
+
 .container .book-main {
    width: 100%;
    display: flex;
@@ -515,27 +532,30 @@ ul li a:hover {
    grid-column: 1 / span 2;
    grid-row: 2;
    position: relative;
-   bottom:  40px;
+   bottom: 40px;
    right: 270px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    position: relative;
 }
+
 .container .info_book .action_book {
    display: flex;
    background-color: var(--background-header);
    margin: 0.5rem 0px;
    padding: 1rem;
-   border-radius: var(--Radius)  ;
+   border-radius: var(--Radius);
 }
-.container .book-main .book_info .action_book .sharing , .action_book a  {
+
+.container .book-main .book_info .action_book .sharing,
+.action_book a {
    width: 70px;
    height: 70px;
    margin: 0rem 10rem;
    padding: 1rem;
    border-radius: 50%;
- display: flex;
+   display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
@@ -548,6 +568,7 @@ ul li a:hover {
    box-shadow: var(--box-shadow);
    transition: var(--transition);
 }
+
 .container .book-main .book_info .action_book .btn-like-book {
    border: none;
    font-size: 1.8rem;
@@ -556,12 +577,13 @@ ul li a:hover {
    right: 11rem;
 }
 
-.container .book-main .book_info .action_book .btn-like-book:hover  {
+.container .book-main .book_info .action_book .btn-like-book:hover {
    background-color: var(--background-header);
    color: var(--color-text-secondary);
 }
 
-.container .book-main .book_info .action_book button:hover , .action_book a:hover {
+.container .book-main .book_info .action_book button:hover,
+.action_book a:hover {
    background-color: var(--btn-hover);
    color: var(--color-bg);
 }
@@ -673,7 +695,8 @@ ul li a:hover {
    padding: 1rem;
    border-radius: var(--Radius);
 }
-.container .profile-box .update-profile{
+
+.container .profile-box .update-profile {
    position: absolute;
    top: 2rem;
    right: 26rem;
@@ -685,13 +708,15 @@ ul li a:hover {
    color: var(--color-bg);
    cursor: pointer;
 }
+
 .container .profile-box form {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 30%;
 }
-.container .profile-box form input{
+
+.container .profile-box form input {
    width: 100%;
    padding: 0.5rem;
    border-radius: var(--Radius);
@@ -700,13 +725,16 @@ ul li a:hover {
    color: var(--color-text-secondary);
 
 }
-.container .profile-box form input:focus{
+
+.container .profile-box form input:focus {
    outline: 1px solid var(--btn);
 }
-.container .profile-box form input:read-only{
+
+.container .profile-box form input:read-only {
    outline: none;
    border-bottom: 1px solid var(--color-text-secondary);
 }
+
 /* end Page Profile user */
 
 /* Start Page Register */
@@ -735,7 +763,8 @@ ul li a:hover {
 }
 
 .container .register form input,
-.container .register form select  ,.container .register .btn-register{
+.container .register form select,
+.container .register .btn-register {
    width: 90%;
    margin: 0.3rem auto;
    border-radius: var(--Radius);
@@ -748,7 +777,7 @@ ul li a:hover {
    outline: 1px solid var(--btn);
 }
 
-.container .register form   .btn-register {
+.container .register form .btn-register {
    background-color: var(--btn) !important;
    color: var(--color-bg);
    font-size: 1.1rem;
@@ -763,6 +792,7 @@ footer {
    height: 250px;
    background-color: var(--background-header);
 }
+
 footer .logo-footer {
    width: 10%;
    height: 50%;
@@ -770,26 +800,31 @@ footer .logo-footer {
    top: 1rem;
    right: 45%;
 }
+
 footer .logo-footer img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: var(--Radius);
 }
+
 footer .links {
    width: 100%;
    height: 50%;
    display: flex;
    justify-content: center;
-   align-items:center ;
+   align-items: center;
 }
+
 footer .links a {
    color: var(--btn);
    transition: var(--transition);
    margin: 0px 1rem;
 }
+
 footer .links a:hover {
    color: var(--btn-hover);
    text-decoration: underline;
 }
+
 /*Footer page */
