--- a/public/css/style.css
+++ b/public/css/style.css
@@ -696,6 +696,20 @@ ul li a:hover {
    margin-bottom: 13.5rem;
 }
 
+.logOut {
+   width: 7rem;
+   height: 2rem;
+   padding: 0.3rem 0rem;
+   text-align: center;
+   border-radius: var(--Radius) ;
+   margin: 0.5rem 0px;
+   background-color: #dcdcdcb0;
+   position: absolute;
+   left: 1rem;
+   top: 1.5rem;
+
+}
+
 .container .profile-box .update-profile {
    position: absolute;
    top: 2rem;
