--- a/public/css/style.css
+++ b/public/css/style.css
@@ -438,6 +438,7 @@ ul li a:hover {
 
 .container .book-main {
    width: 100%;
+   height: 90%;
    display: flex;
    justify-content: space-between;
    padding-top: 1rem;
@@ -699,13 +700,13 @@ ul li a:hover {
 /* start Page Profile user */
 .container .profile-box {
    position: relative;
-   top: 150px;
+   top: 145px;
    width: 100%;
-   height: 30vh;
+   height: 33vh;
    background-color: var(--background-header);
    padding: 1rem;
    border-radius: var(--Radius);
-   margin-bottom: 13.5rem;
+   margin-bottom: 12rem;
 }
 
 .logOut {
@@ -751,7 +752,10 @@ ul li a:hover {
    color: var(--color-text-secondary);
 
 }
+.container .profile-box form #username{
+   border: 1px solid var(--btn);
 
+}
 .container .profile-box form input:focus {
    outline: 1px solid var(--btn);
 }
