--- a/public/css/style.css
+++ b/public/css/style.css
@@ -771,6 +771,7 @@ ul li a:hover {
 .container .register {
    width: 50%;
    margin: 0px auto;
+   margin-bottom: 15.5rem;
    height: 400px;
    position: relative;
    top: 10rem;
@@ -820,7 +821,9 @@ ul li a:hover {
 .container .verify-email{
   position: relative;
   top: 14rem;
-  left: 25vw; 
+  /* left: 25vw;  */
+  right: 25rem;
+  margin-bottom: 25.3rem;
   width: 30rem;
   height: 15rem;
   border: 1px solid var(--btn);
@@ -877,24 +880,13 @@ ul li a:hover {
 /*Footer page */
 footer {
    width: 100%;
-   height: 250px;
+   height: 100px;
    background-color: var(--background-header);
+   display: flex;
+   align-items: center;
 }
 
-footer .logo-footer {
-   width: 10%;
-   height: 50%;
-   position: relative;
-   top: 1rem;
-   right: 45%;
-}
 
-footer .logo-footer img {
-   width: 100%;
-   height: 100%;
-   object-fit: cover;
-   border-radius: var(--Radius);
-}
 
 footer .links {
    width: 100%;
